--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,18 @@
+certifi==2018.1.18
+chardet==3.0.4
+coreapi==2.3.3
+coreschema==0.0.4
 Django==2.0.3
+django-jet==1.0.7
 djangorestframework==3.8.2
+idna==2.6
+itypes==1.1.0
+Jinja2==2.10
+Markdown==2.6.11
+MarkupSafe==1.0
 Pillow==5.0.0
+Pygments==2.2.0
 pytz==2018.3
+requests==2.18.4
+uritemplate==3.0.0
+urllib3==1.22
