--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ chardet==3.0.4
 coreapi==2.3.3
 coreschema==0.0.4
 Django==2.0.3
+django-cors-headers==2.2.0
 django-jet==1.0.7
 djangorestframework==3.8.2
 idna==2.6
